[package]
authors = ["James Baum <james@jamesbaum.co.uk>"]
name = "dungeon"
version = "5.0.0"
edition = "2018"

[dependencies]
arrayref = "0.3.4"
clap = "4.1.4"
rand = "0.5"
serde = "1.0.68"
serde_derive = "1.0.68"
serde_json = "1.0.22"
sha2 = "0.10.6"

[dependencies.cairo-rs]
features = ["png"]
version = "0.16.7"
